# rust-api-binary-pipeline-test

./: Cargo.toml  Dockerfile  Readme.md  test_report_1.txt  test_report_2.txt
src/: actix_api.rs  list_dir.rs  main.rs
